--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -16,7 +16,11 @@
           Welcome to the LoGaG reading group where GraphML researchers present and discuss their papers every week! <br>
           Below
           are the <a (click)="scroll('upcoming')" class="link-style-green">upcoming</a> and <a
-          (click)="scroll('previous')" class="link-style-green">previously</a> covered papers.
+          (click)="scroll('previous')" class="link-style-green">previously</a> covered papers. I organize this reading
+          group with the awesome help of <a
+          href="https://www.valencediscovery.com/"
+          target="_blank"
+          class="link-style-green">Valence Discovery</a>!
         </p>
         <p>
           <a
@@ -88,7 +92,8 @@
         </div>
       </div>
     </div>
-    <div fxFlex="10" fxFlex.xs=""></div>
+    <div fxFlex="10" fxFlex.xs="">
+    </div>
   </div>
 
   <div fxLayout="column" class="width100">
@@ -110,70 +115,76 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2006.05205" target="_blank">
-                  On the Bottleneck of Graph Neural Networks and its Practical Implications</a></h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2106.10934" target="_blank">
+                  GRAND: Graph Neural Diffusion</a> + <a class="item-subtitle link-style-black"
+                                                         href="https://arxiv.org/abs/2110.09443" target="_blank">
+                Beltrami Flow and Neural Diffusion on Graphs</a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                19th of October 2021
+                26th of October 2021
               </div>
               <div>
                 <a>
                   <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Uri Alon, Eran Yahav
+                  First paper: Benjamin Paul Chamberlain, James Rowbottom, Maria Gorinova, Stefan Webb, Emanuele Rossi,
+                  Michael M.
+                  Bronstein
+                </a>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Second paper: Benjamin Paul Chamberlain, James Rowbottom, Davide Eynard, Francesco Di Giovanni,
+                  Xiaowen Dong, Michael M Bronstein
                 </a>
               </div>
             </div>
             <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLoversquashing' allowfullscreen></iframe>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGRAND' allowfullscreen></iframe>
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
-                Uri's
-                <a href="https://hannes-stark.com/assets/bottleneck-tum.pdf"
+                Ben's and James's
+                <a href="https://hannes-stark.com/assets/.pdf"
                    target="_blank"
-                   class="link-style-green">slides</a>.
-                (50 participants)
+                   class="link-style-green">slides</a> come soon.
+                (75 participants)
               </p>
               <p class="paragraph">
                 <a class="slight-bold">Speaker:</a>
-                First author of the paper Dr. <a href="https://urialon.ml/" target="_blank"
-                                                 class="link-style-green">Uri Alon</a> who obtained my PhD at Technion
-                (Israel), advised by Prof. <a href="https://www.cs.technion.ac.il/~yahave/" target="_blank"
-                                              class="link-style-green">Eran Yahav</a>. He is now a Postdoctoral
-                Researcher
-                at the Language Technologies Institute of Carnegie Mellon
-                University, working with Prof. <a href="http://www.phontron.com/" target="_blank"
-                                                  class="link-style-green">Graham Neubig</a> on NLP and learning from
-                source code, where GNNs find many
-                applications. My most recent GNN work includes "<a href="https://openreview.net/pdf?id=i80OPhOCVH2"
-                                                                   target="_blank"
-                                                                   class="link-style-green">On the Bottleneck of Graph
-                Neural Networks and its
-                Practical Implications</a>" and "<a href="https://arxiv.org/pdf/2105.14491.pdf" target="_blank"
-                                                    class="link-style-green">How Attentive are Graph Attention
-                Networks?</a>".
+                Joint first authors of the paper
+                <a href="https://www.linkedin.com/in/jamesrowbottom/" target="_blank"
+                   class="link-style-green">James Rowbottom</a> and Dr. <a
+                href="https://www.linkedin.com/in/benjaminchamberlain/" target="_blank"
+                class="link-style-green">Benjamin Paul Chamberlain</a>.
+                James received his master in AI with distinction from Imperial College London and worked on GRAND as an
+                ML
+                Reserch intern at Prof.
+                <a href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
+                   class="link-style-green">Michael Bronstein's</a>
+                graph ML research group at Twitter. Ben is a Machine Learning Researcher at Twitter who received his PhD
+                from Imperial College London.
               </p>
               <p class="no-margin">
-                <a class="slight-bold">Abstract:</a>
-                Since the proposal of the graph neural network (GNN) by Gori et al. (2005) and Scarselli et al. (2008),
-                one of the major problems in training GNNs was their struggle to propagate information between distant
-                nodes in the graph. We propose a new explanation for this problem: GNNs are susceptible to a bottleneck
-                when aggregating messages across a long path. This bottleneck causes the over-squashing of exponentially
-                growing information into fixed-size vectors. As a result, GNNs fail to propagate messages originating
-                from
-                distant nodes and perform poorly when the prediction task depends on long-range interaction. In this
-                paper, we highlight the inherent problem of over-squashing in GNNs: we demonstrate that the bottleneck
-                hinders popular GNNs from fitting long-range signals in the training data; we further show that GNNs
-                that
-                absorb incoming edges equally, such as GCN and GIN, are more susceptible to over-squashing than GAT and
-                GGNN; finally, we show that prior work, which extensively tuned GNN models of long-range problems,
-                suffers
-                from over-squashing, and that breaking the bottleneck improves their state-of-the-art results without
-                any
-                tuning or additional weights. Our code is available at this <a
-                href="https://github.com/tech-srl/bottleneck/" target="_blank"
-                class="link-style-green">https URL</a>.
+                <a class="slight-bold">Abstract GRAND:</a>
+                We present Graph Neural Diffusion (GRAND) that approaches deep learning on graphs as a continuous
+                diffusion process and treats Graph Neural Networks (GNNs) as discretisations of an underlying PDE. In
+                our
+                model, the layer structure and topology correspond to the discretisation choices of temporal and spatial
+                operators. Our approach
+                allows a principled development of a broad new class of GNNs that are able to address the common plights
+                of graph learning models such as depth, oversmoothing, and bottlenecks. Key to the success of our models
+                are stability with respect to perturbations in the data and this is addressed for both implicit and
+                explicit discretisation schemes. We develop linear and nonlinear versions of GRAND, which achieve
+                competitive results on many standard graph benchmarks.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract BLEND:</a>
+                We propose a novel class of graph neural networks based on the discretised Beltrami flow, a
+                non-Euclidean
+                diffusion PDE. In our model, node features are supplemented with positional encodings derived from the
+                graph topology and jointly evolved by the Beltrami flow, producing simultaneously continuous feature
+                learning and topology evolution. The resulting model generalises many popular graph neural networks and
+                achieves state-of-the-art results on several benchmarks.
               </p>
             </div>
           </div>
@@ -524,48 +535,54 @@
                 </a>
               </div>
             </div>
-            <p class="paragraph">
-              <a class="slight-bold">Resources:</a>
-              Ben's and James's
-              <a href="https://hannes-stark.com/assets/.pdf"
-                 target="_blank"
-                 class="link-style-green">slides</a> come soon.
-              (75 participants)
-            </p>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              Joint first authors of the paper
-              <a href="https://www.linkedin.com/in/jamesrowbottom/" target="_blank"
-                 class="link-style-green">James Rowbottom</a> and Dr. <a
-              href="https://www.linkedin.com/in/benjaminchamberlain/" target="_blank"
-              class="link-style-green">Benjamin Paul Chamberlain</a>.
-              James received his master in AI with distinction from Imperial College London and worked on GRAND as an ML
-              Reserch intern at Prof.
-              <a href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
-                 class="link-style-green">Michael Bronstein's</a>
-              graph ML research group at Twitter. Ben is a Machine Learning Researcher at Twitter who received his PhD
-              from Imperial College London.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract GRAND:</a>
-              We present Graph Neural Diffusion (GRAND) that approaches deep learning on graphs as a continuous
-              diffusion process and treats Graph Neural Networks (GNNs) as discretisations of an underlying PDE. In our
-              model, the layer structure and topology correspond to the discretisation choices of temporal and spatial
-              operators. Our approach
-              allows a principled development of a broad new class of GNNs that are able to address the common plights
-              of graph learning models such as depth, oversmoothing, and bottlenecks. Key to the success of our models
-              are stability with respect to perturbations in the data and this is addressed for both implicit and
-              explicit discretisation schemes. We develop linear and nonlinear versions of GRAND, which achieve
-              competitive results on many standard graph benchmarks.
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract BLEND:</a>
-              We propose a novel class of graph neural networks based on the discretised Beltrami flow, a non-Euclidean
-              diffusion PDE. In our model, node features are supplemented with positional encodings derived from the
-              graph topology and jointly evolved by the Beltrami flow, producing simultaneously continuous feature
-              learning and topology evolution. The resulting model generalises many popular graph neural networks and
-              achieves state-of-the-art results on several benchmarks.
-            </p>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGRAND' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Ben's and James's
+                <a href="https://hannes-stark.com/assets/.pdf"
+                   target="_blank"
+                   class="link-style-green">slides</a> come soon.
+                (75 participants)
+              </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                Joint first authors of the paper
+                <a href="https://www.linkedin.com/in/jamesrowbottom/" target="_blank"
+                   class="link-style-green">James Rowbottom</a> and Dr. <a
+                href="https://www.linkedin.com/in/benjaminchamberlain/" target="_blank"
+                class="link-style-green">Benjamin Paul Chamberlain</a>.
+                James received his master in AI with distinction from Imperial College London and worked on GRAND as an
+                ML
+                Reserch intern at Prof.
+                <a href="https://www.imperial.ac.uk/people/m.bronstein" target="_blank"
+                   class="link-style-green">Michael Bronstein's</a>
+                graph ML research group at Twitter. Ben is a Machine Learning Researcher at Twitter who received his PhD
+                from Imperial College London.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract GRAND:</a>
+                We present Graph Neural Diffusion (GRAND) that approaches deep learning on graphs as a continuous
+                diffusion process and treats Graph Neural Networks (GNNs) as discretisations of an underlying PDE. In
+                our
+                model, the layer structure and topology correspond to the discretisation choices of temporal and spatial
+                operators. Our approach
+                allows a principled development of a broad new class of GNNs that are able to address the common plights
+                of graph learning models such as depth, oversmoothing, and bottlenecks. Key to the success of our models
+                are stability with respect to perturbations in the data and this is addressed for both implicit and
+                explicit discretisation schemes. We develop linear and nonlinear versions of GRAND, which achieve
+                competitive results on many standard graph benchmarks.
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract BLEND:</a>
+                We propose a novel class of graph neural networks based on the discretised Beltrami flow, a
+                non-Euclidean
+                diffusion PDE. In our model, node features are supplemented with positional encodings derived from the
+                graph topology and jointly evolved by the Beltrami flow, producing simultaneously continuous feature
+                learning and topology evolution. The resulting model generalises many popular graph neural networks and
+                achieves state-of-the-art results on several benchmarks.
+              </p>
+            </div>
           </div>
           <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
