--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -110,7 +110,9 @@
                 <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
                 H. Stärk, D. Beaini, G. Corso, P. Tossou, C. Dallago, S. Günnemann, P. Liò
                 <fa-icon class="icon-right-margin--left" [icon]="book"></fa-icon>
-                <i>Preprint. Under review.</i>
+                <i>Preprint. Under review. Accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
+                       class="link-style-green">NeurIPS 2021 AI4S</a> and <a href="https://ml4physicalsciences.github.io/2021/" target="_blank"
+                       class="link-style-green">NeurIPS 2021 ML4PH</a></i>
               </p>
               <p class="item-content">
 
