make zoom and slack more visible

--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -15,7 +15,7 @@
         <p class="text-align-left">
           Welcome to the LoGaG reading group where GraphML researchers present and discuss their papers every week! <br>
           Below
-          are the <a (click)="scroll('upcoming')" class="link-style-green">upcoming</a> and <a
+          are the <a (click)="scroll('Schedule')" class="link-style-green">Schedule</a> and <a
           (click)="scroll('previous')" class="link-style-green">previously</a> covered papers. I organize this reading
           group with the awesome help of <a
           href="https://www.valencediscovery.com/"
@@ -213,11 +213,11 @@
       </div>
     </div>
 
-    <div id="upcoming">
+    <div id="Schedule">
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" class="underline-title">
-          <h1 class="left-titles">UPCOMING</h1>
+          <h1 class="left-titles">SCHEDULE</h1>
         </div>
         <div fxFlex="10" fxFlex.xs="2"></div>
       </div>
